# imagine-launcher

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Imagine_Launcher_Main.py  config.json  index.html  main.js  package-lock.json  package.json  readme.md  script.js  styles.css  tauri.conf.json  tsconfig.json
auth-pages/: error.html  success.html
capabilities/: default.json
core/font/: font_pages_manager.py
core/pages_core/: pages_manager.py
core/ui/: about_card.py  about_detail_card.py  disclaimer_text.py
core/utils/: notif.py
core/window/: window_manager.py
locales/: base.json  en-US.json  en.json  origin.json  zh-CN.json  zh.json  zh_hk.json
minecraft/account/: account_main.py
minecraft/imagine_settings/: ram_manager.py
minecraft/version/: instance_info.py  instances_manager.py
minecraft/versions_control/: versions_control.py
pages/: about_page.py  minecraft_home.py  settings_pages.py
pages/about_page/: about.html  script.js  styles.css
pages/account_page/: account.html  script.js  styles.css
pages/home_page/: home.html  script.js  styles.css
pages/settings_pages/: script.js  settings.html  styles.css
src/: accounts.rs  config.json  config.rs  crash-report.html  downloads.rs  index.html  launcher.rs  lib.rs  main.js  main.rs  minecraft.rs  mods.rs  state.rs  styles.css  tauri-bridge.js  version-loader.js  version-loader.ts
src/locales/: en-US.json  zh-CN.json
src/pages/about_page/: about.html  script.js  styles.css
src/pages/account_page/: account.html  script.js  styles.css
src/version/: version.ini
(+25 files in other folders)
