[package]
name = "imagine-launcher"
version = "0.0.1"
description = "ImagineLauncher - Modern Minecraft Launcher"
authors = ["ZZBuAoYe"]
edition = "2021"

[lib]
name = "imagine_launcher_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
zip = "2"
sha1 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
image = "0.25"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
dotenv = "0.15"
sysinfo = "0.31"
url = "2"
urlencoding = "2"
open = "5"
tiny_http = "0.12"
